--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.3
   carousel_slider: ^4.2.1
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
