--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.3
   carousel_slider: ^4.2.1
   sqflite: ^2.3.3+1
+  lottie: ^3.1.1
 
 dev_dependencies:
   flutter_test:
